<resources>
    <string name="app_name">Spotflyx</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Spotflyx</string>
    <string name="nav_header_subtitle">teamacer@spotflyx.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search...</string>

    <!--NAVIGATION DRAWER MOVIES-->
    <string name="genre_all_movies">All Movies</string>
    <string name="genre_comedy">Comedy</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_terror">Terror</string>
    <string name="genre_science_fiction">Sci-Fy</string>
    <string name="genre_romantic">Romantic</string>
    <string name="genre_adventures">Adventures</string>
    <string name="genre_musical">Musical</string>
    <string name="genre_war">War</string>

    <!--NAVIGATION DRAWER MUSIC-->
    <string name="genre_all_music">All Albums</string>
    <string name="genre_hip_hop">Hip-Hop</string>
    <string name="genre_rock">Rock</string>
    <string name="genre_house">House</string>
    <string name="genre_trap">Trap</string>
    <string name="genre_heavy_metal">Heavy Metal</string>
    <string name="genre_pop">Pop</string>
    <string name="genre_jazz">Jazz</string>
    <string name="genre_blues">Blues</string>
    <string name="genre_hardcore">Hardcore</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_navigation_drawer_music">NavigationDrawerMusic</string>
</resources>
